# kcas

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: aliases.rs  err.rs  kcasv2.rs  kcasv3.rs  lib.rs  stage.rs  sync.rs  types.rs  wrapper.rs
src/kcas/: claim.rs  mod.rs  revert.rs  set.rs  stage_change.rs
tests/: loom_test.rs  shuttle_test.rs
tests/common/: mod.rs
