[package]
name = "kcas"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7.0", required = false }

[features]
std = []
alloc = []
